package NQueryDataSaaS;

enum EDataDeployType {
    DDT_PUSH_TO_SAAS = 0;
    DDT_PULL_FROM_YT = 1;
}

message TPushToSaaSInfo {
    optional string IndexerProxy = 1;
    optional uint32 MaxRetries = 2 [default = 10];
}

message TPullFromYTInfo {
    // TODO
}

message TServiceInfo {
    required string Name = 1;
    optional EDataDeployType DataDeployType = 2 [default = DDT_PUSH_TO_SAAS];
    optional TPushToSaaSInfo PushToSaaSInfo = 3;
    optional TPullFromYTInfo PullFromYTInfo = 4;
}

message TProjectInfo {
    required string Name = 1;
    repeated string Owners = 2;
}

message TFeedLimits {
    optional uint32 MaxRecordSize = 1 [default = 0];
}

message TFeedInfo {
    required string Namespace = 1;
    optional string Project = 2;
    repeated string Services = 3;
    optional TFeedLimits Limits = 4;
}

message TQDSaaSConfig {
    repeated TServiceInfo Services = 1;
    repeated TProjectInfo Projects = 2;
    repeated TFeedInfo Feeds = 3;
}
